exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #0`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="active capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mb-3 pt-0">
        <table class="general-table pb-3 table">
          <tbody>
            <tr>
              <td class="smallbold">Protocol</td>
              <td><span>HTTP/1.1</span></td>
            </tr>
            <tr>
              <td class="smallbold">URL</td>
              <td>http://httpbin.org/post</td>
            </tr>
            <tr>
              <td class="smallbold">Request Method</td>
              <td>
                <span class="d-flex text-left align-items-center">POST</span>
              </td>
            </tr>
            <tr>
              <td class="smallbold">Status Code</td>
              <td><span class="badge badge-success">200</span></td>
            </tr>
          </tbody>
        </table>
        <hr class="my-3" />
        <div class="matching-details mx-3">
          <h3 class="my-2">Match Information</h3>
          <p class="text-text-light">Nothing matched</p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #1`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="active capitalize" data-role="tab-headers"
          >headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <section class="request mt-2">
          <table class="header-table table table-striped">
            <tbody>
              <tr class="">
                <td class="header-name">Host</td>
                <td class="header-original">httpbin.org</td>
              </tr>
              <tr class="">
                <td class="header-name">User-Agent</td>
                <td class="header-original">curl/7.64.1</td>
              </tr>
              <tr class="">
                <td class="header-name">Accept</td>
                <td class="header-original">*/*</td>
              </tr>
              <tr class="">
                <td class="header-name">Proxy-Connection</td>
                <td class="header-original">Keep-Alive</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Type</td>
                <td class="header-original">application/json</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Length</td>
                <td class="header-original">14</td>
              </tr>
            </tbody>
          </table>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #2`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="active capitalize" data-role="tab-headers"
          >headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <section class="request mt-2">
          <table class="header-table table table-striped">
            <tbody>
              <tr class="">
                <td class="header-name">Date</td>
                <td class="header-original">Wed, 26 Feb 2020 15:22:46 GMT</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Type</td>
                <td class="header-original">application/json</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Length</td>
                <td class="header-original">464</td>
              </tr>
              <tr class="">
                <td class="header-name">Connection</td>
                <td class="header-original">keep-alive</td>
              </tr>
              <tr class="">
                <td class="header-name">Server</td>
                <td class="header-original">gunicorn/19.9.0</td>
              </tr>
              <tr class="">
                <td class="header-name">Access-Control-Allow-Origin</td>
                <td class="header-original">*</td>
              </tr>
              <tr class="">
                <td class="header-name">Access-Control-Allow-Credentials</td>
                <td class="header-original">true</td>
              </tr>
            </tbody>
          </table>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #3`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="active capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <div class="mb-3" data-role="log-payload-body-diff">
          <div class="diffsnippet">
            <table class="css-13qjma8-diff-container">
              <tbody>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>1</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>{"foo": "bar"}</pre>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #4`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="active capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <div class="mb-3" data-role="log-payload-body-diff">
          <div class="diffsnippet">
            <table class="css-13qjma8-diff-container">
              <tbody>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>1</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed"><pre>{</pre></td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>2</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>  "args": {}, </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>3</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>  "data": "{\\"foo\\": \\"bar\\"}", </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>4</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>  "files": {}, </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>5</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>  "form": {}, </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>6</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>  "headers": {</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>7</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>    "Accept": "*/*", </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>8</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>    "Content-Length": "14", </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>9</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>    "Content-Type": "application/json", </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>10</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>    "Host": "httpbin.org", </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>11</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>    "Proxy-Connection": "Keep-Alive", </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>12</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>    "User-Agent": "curl/7.64.1", </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>13</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>
    "X-Amzn-Trace-Id": "Root=1-5e568d46-121257eeb4ab060a1c8591c0"</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>14</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed"><pre>  }, </pre></td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>15</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>  "json": {</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>16</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>    "foo": "bar"</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>17</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed"><pre>  }, </pre></td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>18</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>  "origin": "46.219.215.255", </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>19</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed">
                    <pre>  "url": "http://httpbin.org/post"</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-5o05yy-gutter css-1h3hzrb-diff-removed">
                    <pre>20</pre>
                  </td>
                  <td
                    class="css-5o05yy-gutter css-1klnsbn-empty-gutter css-1h3hzrb-diff-removed"
                  >
                    <pre></pre>
                  </td>
                  <td class="css-1u7u2ow-marker css-1h3hzrb-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-1h3hzrb-diff-removed"><pre>}</pre></td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #5`] = `
<div
  data-role="quick-integration-modal"
  class="modal-dialog modal-lg"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure a Payload</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <div>
        <h4 class="mb-3">
          Select the fields that you want to Redact<sup
            ><i
              aria-label="icon: question-circle"
              tabindex="-1"
              class="anticon anticon-question-circle d-inline-flex mr-2 text-text text-sm"
              style="font-size: 14px;"
              ><svg
                viewBox="64 64 896 896"
                focusable="false"
                class=""
                data-icon="question-circle"
                width="1em"
                height="1em"
                fill="currentColor"
                aria-hidden="true"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                ></path></svg></i></sup
          >or Reveal<sup
            ><i
              aria-label="icon: question-circle"
              tabindex="-1"
              class="anticon anticon-question-circle d-inline-flex mr-2 text-text text-sm"
              style="font-size: 14px;"
              ><svg
                viewBox="64 64 896 896"
                focusable="false"
                class=""
                data-icon="question-circle"
                width="1em"
                height="1em"
                fill="currentColor"
                aria-hidden="true"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                ></path></svg></i
          ></sup>
        </h4>
        <div>
          <div>
            <ul class="css-5q6xdk">
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="$.foo"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    foo: bar
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
            </ul>
            <div class="mt-5 text-center">
              <button
                type="button"
                disabled=""
                data-role="select-secure-payload"
                class="button-next btn btn-primary disabled"
              >
                Secure this payload
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #6`] = `
<div
  data-role="quick-integration-modal"
  class="modal-dialog modal-lg"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure a Payload</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <div>
        <h4 class="mb-3">
          Select the fields that you want to Redact<sup
            ><i
              aria-label="icon: question-circle"
              tabindex="-1"
              class="anticon anticon-question-circle d-inline-flex mr-2 text-text text-sm"
              style="font-size: 14px;"
              ><svg
                viewBox="64 64 896 896"
                focusable="false"
                class=""
                data-icon="question-circle"
                width="1em"
                height="1em"
                fill="currentColor"
                aria-hidden="true"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                ></path></svg></i></sup
          >or Reveal<sup
            ><i
              aria-label="icon: question-circle"
              tabindex="-1"
              class="anticon anticon-question-circle d-inline-flex mr-2 text-text text-sm"
              style="font-size: 14px;"
              ><svg
                viewBox="64 64 896 896"
                focusable="false"
                class=""
                data-icon="question-circle"
                width="1em"
                height="1em"
                fill="currentColor"
                aria-hidden="true"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                ></path></svg></i
          ></sup>
        </h4>
        <div>
          <div>
            <ul class="css-5q6xdk">
              <li class="css-79elbk">
                <div>
                  <input
                    name="isGoing"
                    type="checkbox"
                    readonly=""
                    checked=""
                  />
                  <div
                    title="$.foo"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    foo: bar
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
            </ul>
            <div class="mt-3">
              <div class="row">
                <div class="col-lg-6 col-sm-4">Transformer</div>
                <div class="col-lg-6">
                  <div class="payload-wrapper">
                    Operation &nbsp;<i
                      aria-label="icon: question-circle"
                      tabindex="-1"
                      class="anticon anticon-question-circle d-inline-flex mr-2 text-text undefined"
                      style="font-size: 14px;"
                      ><svg
                        viewBox="64 64 896 896"
                        focusable="false"
                        class=""
                        data-icon="question-circle"
                        width="1em"
                        height="1em"
                        fill="currentColor"
                        aria-hidden="true"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                        ></path></svg
                    ></i>
                  </div>
                  <div class="payload-wrapper">
                    Storage &nbsp;<i
                      aria-label="icon: question-circle"
                      tabindex="-1"
                      class="anticon anticon-question-circle d-inline-flex mr-2 text-text undefined"
                      style="font-size: 14px;"
                      ><svg
                        viewBox="64 64 896 896"
                        focusable="false"
                        class=""
                        data-icon="question-circle"
                        width="1em"
                        height="1em"
                        fill="currentColor"
                        aria-hidden="true"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                        ></path></svg
                    ></i>
                  </div>
                  <div class="payload-wrapper">
                    Format &nbsp;<i
                      aria-label="icon: question-circle"
                      tabindex="-1"
                      class="anticon anticon-question-circle d-inline-flex mr-2 text-text undefined"
                      style="font-size: 14px;"
                      ><svg
                        viewBox="64 64 896 896"
                        focusable="false"
                        class=""
                        data-icon="question-circle"
                        width="1em"
                        height="1em"
                        fill="currentColor"
                        aria-hidden="true"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                        ></path></svg
                    ></i>
                  </div>
                </div>
              </div>
              <div>
                <div class="row mt-2">
                  <div class="col-lg-6 col-sm-4">
                    <div class="string-wrapper">
                      <span class="path-wrapper-undefined">$.foo</span>
                    </div>
                  </div>
                  <div class="col-lg-6">
                    <div class="payload-wrapper">
                      <select
                        ><option value="REDACT">Redact</option
                        ><option value="ENRICH">Reveal</option></select
                      >
                    </div>
                    <div class="payload-wrapper">
                      <select
                        ><option value="PERSISTENT">Persistent</option
                        ><option value="VOLATILE">Volatile</option></select
                      >
                    </div>
                    <div class="payload-wrapper">
                      <select
                        ><option value="UUID"
                          >Generic - VGS Alias (Default) </option
                        ><option value="NUM_LENGTH_PRESERVING"
                          >Generic - Numeric Length Preserving </option
                        ><option value="FPE_SIX_T_FOUR"
                          >Payment Card - Format Preserving, Luhn Valid (6T4) </option
                        ><option value="FPE_T_FOUR"
                          >Payment Card - Format Preserving, Luhn Valid (T4) </option
                        ><option value="PFPT"
                          >Payment Card - Prefixed, Luhn Valid, 19 Digits Fixed
                          Length </option
                        ><option value="NON_LUHN_FPE_ALPHANUMERIC"
                          >Payment Card - Format Preserving - Non Luhn Valid </option
                        ><option value="FPE_SSN_T_FOUR"
                          >SSN - Format Preserving (A4) </option
                        ><option value="FPE_ACC_NUM_T_FOUR"
                          >Account Number - Numeric Length Preserving (A4) </option
                        ><option value="FPE_ALPHANUMERIC_ACC_NUM_T_FOUR"
                          >Account Number - Alphanumeric Length Preserving (A4) </option
                        ><option value="GENERIC_T_FOUR"
                          >Generic - VGS Alias Last Four (T4) </option
                        ><option value="RAW_UUID"
                          >Generic - UUID
                        </option></select
                      >
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div class="mt-5 text-center">
              <button
                type="button"
                data-role="select-secure-payload"
                class="button-next btn btn-primary"
              >
                Secure this payload
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #7`] = `
<div
  class="stepper-rows text-primary-light mb-4"
  data-role="whats-next-stepper"
>
  <div class="stepper-row current-step text-accent">
    <span class="circle"
      ><i aria-label="icon: check" class="anticon anticon-check"
        ><svg
          viewBox="64 64 896 896"
          focusable="false"
          class=""
          data-icon="check"
          width="1em"
          height="1em"
          fill="currentColor"
          aria-hidden="true"
        >
          <path
            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
          ></path></svg></i
    ></span>
    <p>Your <strong>route</strong> has been created</p>
  </div>
  <div class="stepper-row">
    <span class="circle">2</span>
    <p>
      Create
      <a href="https://dashboard.verygoodsecurity.com" target="_blank"
        >VGS Account</a
      >
    </p>
  </div>
  <div class="stepper-row">
    <span class="circle">3</span>
    <p>
      <a
        href="https://www.verygoodsecurity.com/docs/features/yaml#import-a-single-route"
        target="_blank"
        >Import your route</a
      >
      to the VGS Dashboard or use the
      <a href="https://www.verygoodsecurity.com/docs/cli/index" target="_blank"
        >VGS CLI</a
      >
      to complete your integration.
    </p>
  </div>
</div>
`;
